// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Affliction Warlock Analyzer analyzers Abilities matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Abilities matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Affliction Warlock Analyzer analyzers AbsoluteCorruption matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers AbsoluteCorruption matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers AgonyUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers AgonyUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers AlwaysBeCasting matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Downtime"
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/spell_mage_altertime.jpg"
          />
           
          Downtime
        </label>
        <div
          className="value"
        >
          4.29 %
        </div>
        <div
          style={
            Object {
              "marginTop": "0.5em",
            }
          }
        >
          <div
            className="statistic-box-bar"
          >
            <div
              className="stat-health-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "width": "95.70777132324379%",
                }
              }
            >
              <img
                alt="Active time"
                src="/img/sword.png"
              />
            </div>
            <div
              className="remainder DeathKnight-bg"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onTouchStart={[Function]}
            >
              <img
                alt="Downtime"
                src="/img/afk.png"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers AlwaysBeCasting matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers ArcaneTorrent matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers ArcaneTorrent matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers CascadingCalamity matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=275372"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Cascading Calamity"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_unstableaffliction_3.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=275372"
            rel="noopener noreferrer"
            target="_blank"
          >
            Cascading Calamity
          </a>
        </label>
        <div
          className="value"
        >
          257 average Haste
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers CascadingCalamity matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Channeling matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Channeling matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Checklist matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Checklist matches the suggestions snapshot 1`] = `"module has no suggestions"`;

exports[`The Affliction Warlock Analyzer analyzers CooldownThroughputTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers CooldownThroughputTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers CorruptionUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers CorruptionUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Darkglare matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic statistic-box statistic-box-list"
  >
    <div
      className="panel-heading"
    >
      <h2>
        <a
          href="http://wowhead.com/spell=205180"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt=""
            className="icon game "
            src="//render-us.worldofwarcraft.com/icons/56/inv_beholderwarlock.jpg"
          />
           
          Summon Darkglare
        </a>
      </h2>
    </div>
    <div
      className="panel-body items"
    >
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Bonus damage from dots
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            5.84 % / 1,072 DPS
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Average dots extended per cast
        </div>
        <div
          className="flex-sub text-right"
        >
          8.50
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            Total damage
          </dfn>
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            12.63 % / 2,319 DPS
          </dfn>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers Darkglare matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers Deathbolt matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Deathbolt matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers DotUptimeStatisticBox matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic statistic-box statistic-box-list"
  >
    <div
      className="panel-heading"
    >
      <h2>
        DoT uptimes
      </h2>
    </div>
    <div
      className="panel-body items"
    >
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=980"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_curseofsargeras.jpg"
            />
             
            Agony
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          99.80 %
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=172"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="/img/Icons/spell_shadow_abominationexplosion.jpg"
            />
             
            Corruption
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          95.14 %
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=30108"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_unstableaffliction_3.jpg"
            />
             
            Unstable Affliction
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            79.30 %
          </dfn>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers DotUptimeStatisticBox matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers DrainSoul matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers DrainSoul matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers DreadfulCalling matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers DreadfulCalling matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers GlobalCooldown matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers GlobalCooldown matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers GrimoireOfSacrifice matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers GrimoireOfSacrifice matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers Haunt matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers Haunt matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "ability_warlock_haunt",
    "importance": "regular",
    "issue": <React.Fragment>
      Your 
      <SpellLink
        icon={true}
        id={48181}
      />
       debuff uptime is too low. While it's usually not possible to get 100% uptime due to travel and cast time, you should aim for as much uptime on the debuff as possible.
    </React.Fragment>,
    "stat": <React.Fragment>
      77.53% Haunt uptime.
       (
      &gt; 90.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Affliction Warlock Analyzer analyzers InevitableDemise matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers InevitableDemise matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers Nightfall matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers Nightfall matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers PandemicInvocation matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers PandemicInvocation matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers PhantomSingularity matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers PhantomSingularity matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers ShadowEmbrace matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers ShadowEmbrace matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SiphonLifeUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers SiphonLifeUptime matches the suggestions snapshot 1`] = `
Array [
  Object {
    "details": null,
    "icon": "spell_shadow_requiem",
    "importance": "minor",
    "issue": <React.Fragment>
      Your 
      <SpellLink
        icon={true}
        id={63106}
      />
       uptime can be improved. Try to pay more attention to your Siphon Life on the boss, perhaps use some debuff tracker.
    </React.Fragment>,
    "stat": <React.Fragment>
      93.08% Siphon Life uptime
       (
      &gt;95.00% is recommended
      )
    </React.Fragment>,
  },
]
`;

exports[`The Affliction Warlock Analyzer analyzers SoulConduit matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SoulConduit matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardDetails matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <img
            alt="Wasted Soul Shards"
            src="warlock_soulshard_bw.jpg"
          />
           
          Wasted Soul Shards
        </label>
        <div
          className="value"
        >
          0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardDetails matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardTracker matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers SoulShardTracker matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers SuddenOnset matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers SuddenOnset matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers TalentStatisticBox matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic statistic-box statistic-box-list"
  >
    <div
      className="panel-heading"
    >
      <h2>
        Talents
      </h2>
    </div>
    <div
      className="panel-body items"
    >
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Average 
          <a
            href="http://wowhead.com/spell=264106"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_twilightflamebolt.jpg"
            />
             
            Deathbolt
          </a>
           damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            51,480
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          Average DoT length on 
          <a
            href="http://wowhead.com/spell=264106"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_fire_twilightflamebolt.jpg"
            />
             
            Deathbolt
          </a>
           cast
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            5.37 s
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=63106"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_requiem.jpg"
            />
             
            Siphon Life
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          93.08 %
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=205179"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/inv_enchant_voidsphere.jpg"
            />
             
            Phantom Singularity
          </a>
           damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            5.80 % / 1,064 DPS
          </dfn>
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=48181"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_haunt.jpg"
            />
             
            Haunt
          </a>
           uptime
        </div>
        <div
          className="flex-sub text-right"
        >
          77.53 %
        </div>
      </div>
      <div
        className="flex"
      >
        <div
          className="flex-main"
        >
          <a
            href="http://wowhead.com/spell=48181"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt=""
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/ability_warlock_haunt.jpg"
            />
             
            Haunt
          </a>
           bonus damage
        </div>
        <div
          className="flex-sub text-right"
        >
          <dfn
            className=""
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            style={Object {}}
          >
            6.45 % / 1,184 DPS
          </dfn>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers TalentStatisticBox matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers UnstableAfflictionUptime matches the statistic snapshot 1`] = `"module has no statistic method"`;

exports[`The Affliction Warlock Analyzer analyzers UnstableAfflictionUptime matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer analyzers VileTaint matches the statistic snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers VileTaint matches the suggestions snapshot 1`] = `"module inactive"`;

exports[`The Affliction Warlock Analyzer analyzers WrackingBrilliance matches the statistic snapshot 1`] = `
<div
  className="col-lg-3 col-md-4 col-sm-6 col-xs-12"
>
  <div
    className="panel statistic standard statistic-box"
    style={
      Object {
        "height": "auto",
        "zIndex": 1,
      }
    }
  >
    <div
      className="panel-body"
    >
      <div
        className="pad"
      >
        <label>
          <a
            href="http://wowhead.com/spell=272891"
            rel="noopener noreferrer"
            target="_blank"
          >
            <img
              alt="Wracking Brilliance"
              className="icon game "
              src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_felmending.jpg"
            />
          </a>
           
          <a
            href="http://wowhead.com/spell=272891"
            rel="noopener noreferrer"
            target="_blank"
          >
            Wracking Brilliance
          </a>
        </label>
        <div
          className="value"
        >
          334 average Intellect
        </div>
      </div>
    </div>
    <div
      className="detail-corner"
      data-place="top"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
    >
      <svg
        className="icon"
        viewBox="0 0 100 100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M58.9,82.9h7v12.9H34.1V82.9h7.1V45.5h-0.6c-3.6,0-6.4-2.9-6.4-6.4c0-3.6,2.9-6.4,6.4-6.4h0.6h17.4h0.3V82.9z M49,25.8  c6,0,10.8-4.8,10.8-10.8C59.8,9,55,4.2,49,4.2S38.2,9,38.2,15C38.2,21,43,25.8,49,25.8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`The Affliction Warlock Analyzer analyzers WrackingBrilliance matches the suggestions snapshot 1`] = `Array []`;

exports[`The Affliction Warlock Analyzer should match the checklist snapshot 1`] = `
<ul
  className="checklist"
>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Maintain your DoTs on the boss
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "96.77022163317527%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Affliction Warlocks rely on DoTs as a means of dealing damage to the target. You should try to keep as highest uptime on them as possible.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=980"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_curseofsargeras.jpg"
                  />
                   
                  Agony
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  99.80%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=172"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="/img/Icons/spell_shadow_abominationexplosion.jpg"
                  />
                   
                  Corruption
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  95.14%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=30108"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_unstableaffliction_3.jpg"
                  />
                   
                  Unstable Affliction
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  79.30%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=63106"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_requiem.jpg"
                  />
                   
                  Siphon Life
                </a>
                 uptime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  93.08%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#a6c34c",
                        "transition": "background-color 800ms",
                        "width": "87.08088653270106%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Don't cap your Soul Shards
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Soul Shards are your main and most important resource and since their generation is random as Affliction, it's very important not to let them cap.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Wasted shards per minute
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                  <dfn
                    className=""
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onTouchStart={[Function]}
                    style={Object {}}
                  >
                     
                    0.00
                     
                     
                  </dfn>
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your cooldowns
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Be mindful of your cooldowns if you are specced into them and use them when it's appropriate. It's okay to hold a cooldown for a little bit when the encounter requires it (burn phases), but generally speaking you should use them as much as you can.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=205180"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/inv_beholderwarlock.jpg"
                  />
                   
                  Summon Darkglare
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=113860"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_soulburn.jpg"
                  />
                   
                  Dark Soul: Misery
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  91.93%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=205179"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/inv_enchant_voidsphere.jpg"
                  />
                   
                  Phantom Singularity
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  100.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable expanded failed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Use your utility and defensive spells
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#ac1f39",
                  "width": "0%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Use other spells in your toolkit to your advantage. For example, you can try to minimize necessary movement by using 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Demonic Gateway
            </a>
            , 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Demonic Circle
            </a>
            , 
            <a
              href="http://wowhead.com/spell=111400"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/ability_deathwing_sealarmorbreachtga.jpg"
              />
               
              Burning Rush
            </a>
             or mitigate incoming damage with 
            <a
              href="http://wowhead.com/spell=104773"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
              />
               
              Unending Resolve
            </a>
            /
            <a
              href="http://wowhead.com/spell=108416"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/warlock_sacrificial_pact.jpg"
              />
               
              Dark Pact
            </a>
            .
            <br />
            While you shouldn't cast these defensives on cooldown, be aware of them and use them whenever effective. Not using them at all indicates you might not be aware of them or not using them optimally.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=48020"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccircleteleport.jpg"
                  />
                   
                  Demonic Circle Teleport
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                <a
                  href="http://wowhead.com/spell=104773"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <img
                    alt=""
                    className="icon game "
                    src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demonictactics.jpg"
                  />
                   
                  Unending Resolve
                </a>
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  0.00%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Always be casting
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#4ec04e",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            You should try to avoid doing nothing during the fight. When you're out of Soul Shards, cast 
            <a
              href="http://wowhead.com/spell=232670"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_shadowbolt.jpg"
              />
               
              Shadow Bolt
            </a>
            /
            <a
              href="http://wowhead.com/spell=198590"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_haunting.jpg"
              />
               
              Drain Soul
            </a>
            , refresh your DoTs etc. When you have to move, use your instant abilities or try to utilize 
            <a
              href="http://wowhead.com/spell=268358"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_shadow_demoniccirclesummon.jpg"
              />
               
              Teleport
            </a>
             or 
            <a
              href="http://wowhead.com/spell=111771"
              rel="noopener noreferrer"
              target="_blank"
            >
              <img
                alt=""
                className="icon game "
                src="//render-us.worldofwarcraft.com/icons/56/spell_warlock_demonicportal_green.jpg"
              />
               
              Gateway
            </a>
             to reduce the movement even further.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Downtime
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  4.29%
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    className="expandable  passed"
  >
    <div
      className="meta"
      onClick={[Function]}
    >
      <div
        className="flex"
      >
        <div
          className="flex-main name"
        >
          Be well prepared
        </div>
        <div
          className="flex-sub perf"
        >
          <div
            className="perf-container"
          >
            <div
              className="perf-bar"
              style={
                Object {
                  "backgroundColor": "#a6c34c",
                  "width": "85.71428571428571%",
                }
              }
            />
          </div>
        </div>
        <div
          className="chevron"
        >
          <svg
            className="icon"
            viewBox="0 0 16 9"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14.0059397,2.26485497e-14 C15.1072288,2.26485497e-14 15.3722573,0.627746582 14.5881847,1.41182411 L8.70999225,7.29005337 C8.317902,7.68214607 7.67653023,7.6764822 7.29009898,7.29005337 L1.41183294,1.41182411 C0.632099139,0.632095183 0.894513756,2.26485497e-14 1.99406028,2.26485497e-14 L14.0059397,2.26485497e-14 Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-hidden={true}
      className="rah-static rah-static--height-zero details"
      style={
        Object {
          "height": 0,
          "overflow": "hidden",
        }
      }
    >
      <div
        style={Object {}}
      >
        <div
          className="row text-muted description"
        >
          <svg
            className="icon"
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M53.1,73h-7.2c-1.1,0-1.9-0.9-1.9-1.9V44h11v27.1C55,72.1,54.1,73,53.1,73z"
            />
            <path
              d="M55,39H44v-9.1c0-1.1,0.9-1.9,1.9-1.9h7.2c1.1,0,1.9,0.9,1.9,1.9V39z"
            />
            <path
              d="M50,96C24.6,96,4,75.4,4,50S24.6,4,50,4s46,20.6,46,46S75.4,96,50,96z M50,12c-21,0-38,17-38,38s17,38,38,38s38-17,38-38   S71,12,50,12z"
            />
          </svg>
          <div
            className="col-md-12"
          >
            Being well prepared with food, flasks, potions and enchants is an easy way to improve your performance.
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                All items enchanted
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Using high quality enchants
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  3
                   
                  / 3
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a pre-potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  No
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#ac1f39",
                        "transition": "background-color 800ms",
                        "width": "0%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Used a second potion
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Flask used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                High quality food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="flex"
            >
              <div
                className="flex-main"
              >
                Food used
              </div>
              <div
                className="flex-sub content-middle text-muted"
                style={
                  Object {
                    "marginLeft": 5,
                    "marginRight": 10,
                    "minWidth": 55,
                  }
                }
              >
                <div
                  className="text-right"
                  style={
                    Object {
                      "width": "100%",
                    }
                  }
                >
                   
                  Yes
                   
                   
                </div>
              </div>
              <div
                className="flex-sub content-middle"
                style={
                  Object {
                    "width": 50,
                  }
                }
              >
                <div
                  className="performance-bar-container"
                >
                  <div
                    className="performance-bar small"
                    style={
                      Object {
                        "backgroundColor": "#4ec04e",
                        "transition": "background-color 800ms",
                        "width": "100%",
                      }
                    }
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </li>
</ul>
`;
